Here's the commented version of the code:

```c++
/*
 *
 * Copyright 2018 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

#include <grpcpp/grpcpp.h>

#include <iostream>
#include <memory>
#include <string>

#include "absl/flags/parse.h"
#include "absl/log/initialize.h"

// Include the generated gRPC protobuf headers
// Different paths are used depending on whether this is a Bazel build or not
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"
#else
#include "helloworld.grpc.pb.h"
#endif

// Using declarations to simplify usage of gRPC and protobuf classes
using grpc::Channel;
using grpc::ChannelArguments;
using grpc::ClientContext;
using grpc::Status;
using helloworld::Greeter;
using helloworld::HelloReply;
using helloworld::HelloRequest;

/**
 * @brief Client for the Greeter service that communicates with a gRPC server.
 */
class GreeterClient {
 public:
  /**
   * @brief Constructs a new GreeterClient connected to the specified channel.
   * @param channel The gRPC channel to use for communication with the server.
   */
  GreeterClient(std::shared_ptr<Channel> channel)
      : stub_(Greeter::NewStub(channel)) {}

  /**
   * @brief Sends a greeting to the server and returns the response.
   * @param user The name to include in the greeting request.
   * @return std::string The greeting response from server or error message.
   */
  std::string SayHello(const std::string& user) {
    // Create and populate the request protobuf message
    HelloRequest request;
    request.set_name(user);

    // Response will be stored here
    HelloReply reply;

    // ClientContext carries configuration and metadata for the RPC
    ClientContext context;

    // Set compression algorithm for this RPC call
    context.set_compression_algorithm(GRPC_COMPRESS_DEFLATE);

    // Make the actual RPC call to the server
    Status status = stub_->SayHello(&context, request, &reply);

    // Handle the response
    if (status.ok()) {
      return reply.message();
    } else {
      // Print error details if the RPC failed
      std::cout << status.error_code() << ": " << status.error_message()
                << std::endl;
      return "RPC failed";
    }
  }

 private:
  std::unique_ptr<Greeter::Stub> stub_;  // gRPC service stub
};

/**
 * @brief Main function that demonstrates the GreeterClient usage.
 */
int main(int argc, char** argv) {
  // Initialize command line parsing and logging from absl
  absl::ParseCommandLine(argc, argv);
  absl::InitializeLog();

  // Configure channel arguments
  ChannelArguments args;
  // Set default compression algorithm for all calls on this channel
  args.SetCompressionAlgorithm(GRPC_COMPRESS_GZIP);

  // Create a client connected to localhost on port 50051
  // Note: Using insecure credentials (not recommended for production)
  GreeterClient greeter(grpc::CreateCustomChannel(
      "localhost:50051", grpc::InsecureChannelCredentials(), args));
  
  // Prepare and send a greeting request
  std::string user("world world world world");
  std::string reply = greeter.SayHello(user);
  
  // Print the server's response
  std::cout << "Greeter received: " << reply << std::endl;

  return 0;
}
```

Key improvements in the comments:
1. Added class-level documentation for GreeterClient
2. Added detailed method documentation including parameters and return values
3. Explained the purpose of each significant code block
4. Noted important implementation details like compression settings
5. Added warnings about insecure channel credentials
6. Documented the main program flow
7. Explained the conditional includes for different build systems
8. Added comments about the purpose of each using declaration

The comments now provide a clear understanding of:
- What the code does
- How it's structured
- Important implementation choices
- Potential gotchas (like insecure credentials)
- The flow of execution