Here's the commented version of the code:

```c++
/*
 *
 * Copyright 2021 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

// Include necessary headers
#include <grpcpp/grpcpp.h>  // Main gRPC C++ library

#include <condition_variable>  // For thread synchronization
#include <iostream>            // For console I/O
#include <memory>              // For smart pointers
#include <mutex>               // For mutex locks
#include <string>              // For string operations

// Include Abseil libraries for flags and logging
#include "absl/flags/flag.h"
#include "absl/flags/parse.h"
#include "absl/log/initialize.h"
#include "absl/log/log.h"
#include "wrapping_event_engine.h"  // Custom event engine implementation

// Include generated protobuf headers
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"
#else
#include "helloworld.grpc.pb.h"
#endif

// Define command line flag for server address with default value
ABSL_FLAG(std::string, target, "localhost:50051", "Server address");

// Using declarations for gRPC and protobuf types
using grpc::Channel;
using grpc::ClientContext;
using grpc::Status;
using helloworld::Greeter;
using helloworld::HelloReply;
using helloworld::HelloRequest;

namespace my_application {

// Client class for interacting with the Greeter service
class GreeterClient {
 public:
  // Constructor takes a shared channel to the server
  GreeterClient(std::shared_ptr<Channel> channel)
      : stub_(Greeter::NewStub(channel)) {}

  // Sends a greeting to the server and returns the response
  std::string SayHello(const std::string& user) {
    // Prepare the request with the user's name
    HelloRequest request;
    request.set_name(user);
    
    // Response and context objects
    HelloReply reply;
    ClientContext context;
    
    // Synchronization primitives for async call
    std::mutex mu;
    std::condition_variable cv;
    bool done = false;
    Status status;
    
    // Make asynchronous RPC call
    stub_->async()->SayHello(&context, &request, &reply,
                             [&mu, &cv, &done, &status](Status s) {
                               // Callback when RPC completes
                               status = std::move(s);
                               std::lock_guard<std::mutex> lock(mu);
                               done = true;
                               cv.notify_one();  // Notify waiting thread
                             });
    
    // Wait for the RPC to complete
    std::unique_lock<std::mutex> lock(mu);
    while (!done) {
      cv.wait(lock);
    }
    
    // Return response if successful, otherwise error message
    if (status.ok()) {
      return reply.message();
    }
    std::cout << status.error_code() << ": " << status.error_message()
              << std::endl;
    return "RPC failed";
  }

 private:
  std::unique_ptr<Greeter::Stub> stub_;  // gRPC service stub
};

}  // namespace my_application

int main(int argc, char** argv) {
  // Initialize command line parsing and logging
  absl::ParseCommandLine(argc, argv);
  absl::InitializeLog();

  // Create and set custom event engine
  auto custom_engine = std::make_shared<my_application::WrappingEventEngine>();
  grpc_event_engine::experimental::SetDefaultEventEngine(custom_engine);

  {
    // Create client and make RPC call
    std::string target_str = absl::GetFlag(FLAGS_target);
    my_application::GreeterClient greeter(
        grpc::CreateChannel(target_str, grpc::InsecureChannelCredentials()));
    std::string user("EventEngine");
    std::string reply = greeter.SayHello(user);
    std::cout << "Greeter received: " << reply << std::endl;
  }
  
  // Log how many closures were executed by our custom event engine
  LOG(INFO) << "My EventEngine ran " << custom_engine->get_run_count()
            << " closures";

  // Clean up
  custom_engine.reset();
  grpc_event_engine::experimental::ShutdownDefaultEventEngine();
  return 0;
}
```

Key additions in the comments:
1. Explained the purpose of each major include
2. Documented the GreeterClient class and its methods
3. Added detailed comments about the async RPC flow and synchronization
4. Explained the main function's workflow
5. Added context about the custom event engine usage
6. Clarified the purpose of each significant code block

The comments are designed to help future developers understand:
- The overall structure of the code
- How the gRPC client works
- The asynchronous call pattern
- The custom event engine integration
- The program flow from startup to shutdown