Here's the commented version of the code:

```c++
// Copyright 2023 gRPC authors.

// Include necessary headers
#include <grpcpp/grpcpp.h>  // gRPC C++ library
#include <condition_variable>  // For condition variables
#include <iostream>  // For I/O operations
#include <memory>  // For smart pointers
#include <mutex>  // For mutex
#include <string>  // For string operations

// Include Abseil libraries for flags, logging, and string formatting
#include "absl/flags/flag.h"
#include "absl/flags/parse.h"
#include "absl/log/initialize.h"
#include "absl/strings/str_format.h"

// Include the generated gRPC protobuf headers
// Different paths for Bazel vs non-Bazel builds
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"
#else
#include "helloworld.grpc.pb.h"
#endif

// Define a command line flag for server address with default value
ABSL_FLAG(std::string, target, "localhost:50051", "Server address");

// Using declarations to simplify code
using grpc::Channel;
using grpc::ClientContext;
using grpc::Status;
using helloworld::Greeter;
using helloworld::HelloReply;
using helloworld::HelloRequest;

// GreeterClient class for interacting with the gRPC Greeter service
class GreeterClient {
 public:
  // Constructor takes a shared_ptr to a Channel and creates a stub
  GreeterClient(std::shared_ptr<Channel> channel)
      : stub_(Greeter::NewStub(channel)) {}

  // Method to send a SayHello request to the server
  void SayHello(const std::string& user) {
    // Create request object and set the name
    HelloRequest request;
    request.set_name(user);

    // Will store the server's reply
    HelloReply reply;

    // Context for the client. It could be used to convey extra information to
    // the server and/or tweak certain RPC behaviors.
    ClientContext context;

    // Synchronization primitives for async call
    std::mutex mu;
    std::condition_variable cv;
    bool done = false;
    Status status;

    // Log the outgoing request
    std::cout << absl::StrFormat("### Send: SayHello(name=%s)", user)
              << std::endl;

    // Make the asynchronous call to the server
    stub_->async()->SayHello(&context, &request, &reply, [&](Status s) {
      // Callback function that runs when the RPC completes
      status = std::move(s);
      std::lock_guard<std::mutex> lock(mu);
      done = true;
      cv.notify_one();  // Notify the waiting thread
    });

    // Wait for the async call to complete
    std::unique_lock<std::mutex> lock(mu);
    while (!done) {
      cv.wait(lock);
    }

    // Check the status and print appropriate message
    if (status.ok()) {
      std::cout << absl::StrFormat("Ok. ReplyMessage=%s", reply.message())
                << std::endl;
    } else {
      std::cout << absl::StrFormat("Failed. Code=%d Message=%s",
                                   status.error_code(), status.error_message())
                << std::endl;
    }
  }

 private:
  // The gRPC stub used to make RPC calls
  std::unique_ptr<Greeter::Stub> stub_;
};

// Main function
int main(int argc, char** argv) {
  // Initialize command line parsing and logging
  absl::ParseCommandLine(argc, argv);
  absl::InitializeLog();

  // Get server address from command line flag
  std::string target_str = absl::GetFlag(FLAGS_target);

  // Create GreeterClient with insecure channel credentials
  GreeterClient greeter(
      grpc::CreateChannel(target_str, grpc::InsecureChannelCredentials()));

  // Make test calls to the server
  greeter.SayHello("");  // Empty name test
  greeter.SayHello("ItsTooLongName");  // Long name test
  greeter.SayHello("World");  // Normal case

  return 0;
}
```

The comments explain:
1. Header inclusions and their purposes
2. Command line flag definition
3. Class structure and purpose
4. Method functionality and flow
5. Synchronization mechanisms for async calls
6. Main function execution flow
7. Important implementation details

The comments are designed to help future developers understand:
- The overall architecture
- Key components and their roles
- The flow of execution
- Important implementation details
- The purpose of each test case