Here's the commented version of the code:

```c++
// Copyright 2023 gRPC authors.

// Include necessary headers
#include <grpcpp/ext/gcp_observability.h>  // For GCP Observability features
#include <grpcpp/grpcpp.h>                // Core gRPC C++ functionality

#include <chrono>      // For time-related operations
#include <iostream>    // For console I/O
#include <memory>      // For smart pointers
#include <string>      // For string operations
#include <thread>      // For thread operations

#include "absl/flags/flag.h"    // For command line flag definitions
#include "absl/flags/parse.h"   // For command line flag parsing
#include "absl/log/initialize.h" // For ABSL log initialization

// Include the generated protobuf headers
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"  // For Bazel build
#else
#include "helloworld.grpc.pb.h"                 // For non-Bazel build
#endif

// Define a command line flag for server address with default value
ABSL_FLAG(std::string, target, "localhost:50051", "Server address");

// Using declarations to simplify code
using grpc::Channel;
using grpc::ClientContext;
using grpc::Status;
using helloworld::Greeter;
using helloworld::HelloReply;
using helloworld::HelloRequest;

// GreeterClient class for making RPC calls to the Greeter service
class GreeterClient {
 public:
  // Constructor takes a shared_ptr to a Channel (connection) and creates a stub
  GreeterClient(std::shared_ptr<Channel> channel)
      : stub_(Greeter::NewStub(channel)) {}

  // Method to call the SayHello RPC
  std::string SayHello(const std::string& user) {
    // Create and populate the request message
    HelloRequest request;
    request.set_name(user);

    // Will store the server's response
    HelloReply reply;

    // Context for the client. It could be used to send metadata, deadlines, etc.
    ClientContext context;

    // The actual RPC call
    Status status = stub_->SayHello(&context, request, &reply);

    // Check the status of the RPC call
    if (status.ok()) {
      return reply.message();  // Return the response message if successful
    } else {
      // Print error details if the call failed
      std::cout << status.error_code() << ": " << status.error_message()
                << std::endl;
      return "RPC failed";
    }
  }

 private:
  // The gRPC stub used to make RPC calls
  std::unique_ptr<Greeter::Stub> stub_;
};

// Main function
int main(int argc, char** argv) {
  // Parse command line flags
  absl::ParseCommandLine(argc, argv);
  // Initialize ABSL logging
  absl::InitializeLog();

  // Get the target server address from command line flags
  std::string target_str = absl::GetFlag(FLAGS_target);

  // Initialize GCP Observability
  auto observability = grpc::GcpObservability::Init();
  if (!observability.ok()) {
    // Print error and exit if initialization fails
    std::cerr << "GcpObservability::Init() failed: "
              << observability.status().ToString() << std::endl;
    return static_cast<int>(observability.status().code());
  }
  std::cout << "Initialized GCP Observability" << std::endl;

  // Create a GreeterClient with an insecure channel (no encryption)
  GreeterClient greeter(
      grpc::CreateChannel(target_str, grpc::InsecureChannelCredentials()));
  
  // Set the user name and make the RPC call
  std::string user("world");
  std::string reply = greeter.SayHello(user);
  std::cout << "Greeter received: " << reply << std::endl;

  // Clean up and flush any remaining observability data
  std::cout << "Closing and flushing GCP Observability data" << std::endl;
  return 0;
}
```

The comments explain:
1. The purpose of each include statement
2. The command line flag definition
3. The GreeterClient class and its methods
4. The RPC call flow and error handling
5. The main program flow including initialization and cleanup
6. Important implementation details about the gRPC channel and observability

The comments are designed to help future developers understand:
- What the code does at each step
- Why certain design decisions were made
- How to modify or extend the code
- Where to look for potential issues