Here's the commented version of the code:

```c++
/*
 *
 * Copyright 2015 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

// Include necessary headers
#include <grpcpp/grpcpp.h>  // Main gRPC C++ library

#include <iostream>
#include <memory>
#include <string>

// Include Abseil flags and logging utilities
#include "absl/flags/parse.h"
#include "absl/log/initialize.h"

// Include the generated gRPC protobuf headers
// Different paths for Bazel vs non-Bazel builds
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"
#else
#include "helloworld.grpc.pb.h"
#endif

// Using declarations for commonly used gRPC types
using grpc::Channel;
using grpc::ChannelArguments;
using grpc::ClientContext;
using grpc::Status;
using helloworld::Greeter;
using helloworld::HelloReply;
using helloworld::HelloRequest;

/**
 * @brief Client for the Greeter service.
 * 
 * This class provides methods to communicate with the Greeter gRPC service.
 */
class GreeterClient {
 public:
  /**
   * @brief Construct a new Greeter Client object
   * 
   * @param channel The gRPC channel to use for communication
   */
  GreeterClient(std::shared_ptr<Channel> channel)
      : stub_(Greeter::NewStub(channel)) {}

  /**
   * @brief Sends a greeting to the server
   * 
   * @param user The name to include in the greeting
   * @return std::string The server's response message or error message
   */
  std::string SayHello(const std::string& user) {
    // Create and populate the request message
    HelloRequest request;
    request.set_name(user);

    // Will store the server's response
    HelloReply reply;

    // Context for the client. It could be used to convey extra information to
    // the server and/or tweak certain RPC behaviors.
    ClientContext context;

    // The actual RPC call
    Status status = stub_->SayHello(&context, request, &reply);

    // Process the response
    if (status.ok()) {
      return reply.message();
    } else {
      // Print error details if the RPC failed
      std::cout << status.error_code() << ": " << status.error_message()
                << std::endl;
      return "RPC failed";
    }
  }

 private:
  // The gRPC client stub used to make RPC calls
  std::unique_ptr<Greeter::Stub> stub_;
};

/**
 * @brief Main function that creates a client and makes a greeting request
 */
int main(int argc, char** argv) {
  // Initialize command line parsing and logging
  absl::ParseCommandLine(argc, argv);
  absl::InitializeLog();

  // Configure channel arguments
  ChannelArguments args;
  
  // Set the load balancing policy to round robin
  args.SetLoadBalancingPolicyName("round_robin");

  // Create a client connected to localhost on port 50051
  // Note: Using insecure credentials for demonstration purposes
  GreeterClient greeter(grpc::CreateCustomChannel(
      "localhost:50051", grpc::InsecureChannelCredentials(), args));
  
  // Default user name
  std::string user("world");
  
  // Make the RPC call and print the response
  std::string reply = greeter.SayHello(user);
  std::cout << "Greeter received: " << reply << std::endl;

  return 0;
}
```

Key improvements made:
1. Added detailed class and method documentation
2. Explained the purpose of each major code section
3. Added comments about important implementation details
4. Documented the gRPC-specific components (ClientContext, Status, etc.)
5. Explained the channel configuration
6. Noted the use of insecure credentials for demonstration purposes
7. Added comments about the RPC call flow and error handling

The comments are designed to help future developers understand:
- The overall structure of the gRPC client
- The purpose of each component
- How the RPC call is made and processed
- Important implementation details and considerations