Here's the commented version of your code:

```c++
// Copyright 2021 the gRPC authors.

// Include necessary headers
#include <grpcpp/grpcpp.h>  // Main gRPC C++ library
#include <iostream>         // For console I/O
#include <memory>           // For smart pointers
#include <string>           // For string operations

// Include ABSL and protocol buffer headers
#include "absl/flags/parse.h"       // For command line parsing
#include "absl/log/initialize.h"    // For logging initialization
#include "examples/protos/helloworld.grpc.pb.h"  // Generated gRPC protocol buffer code

// Using declarations to simplify code
using grpc::Channel;            // gRPC communication channel
using grpc::ClientContext;       // Context for client-side calls
using grpc::Status;              // Status of RPC operations
using helloworld::Greeter;       // gRPC service interface
using helloworld::HelloReply;    // Response message type
using helloworld::HelloRequest;  // Request message type

// Client class for interacting with the Greeter service
class GreeterClient {
 public:
  // Constructor that takes a shared channel and creates a stub
  GreeterClient(std::shared_ptr<Channel> channel)
      : stub_(Greeter::NewStub(channel)) {}

  // Sends a greeting to the server and returns the response
  std::string SayHello(const std::string& user) {
    // Create and populate the request message
    HelloRequest request;
    request.set_name(user);
    
    // Objects to store the response and call context
    HelloReply reply;
    ClientContext context;
    
    // Make the RPC call
    Status status = stub_->SayHello(&context, request, &reply);
    
    // Check if the call was successful
    if (status.ok()) {
      return reply.message();  // Return the server's response
    }
    
    // Print error details if the call failed
    std::cout << status.error_code() << ": " << status.error_message()
              << std::endl;
    return "RPC failed";  // Return failure message
  }

 private:
  // The gRPC stub used to make RPC calls
  std::unique_ptr<Greeter::Stub> stub_;
};

// Main program entry point
int main(int argc, char** argv) {
  // Initialize command line parsing and logging
  absl::ParseCommandLine(argc, argv);
  absl::InitializeLog();
  
  // Define the target server address (Unix domain socket in abstract namespace)
  std::string target_str("unix-abstract:grpc%00abstract");
  
  // Create a client instance with insecure channel credentials
  GreeterClient greeter(
      grpc::CreateChannel(target_str, grpc::InsecureChannelCredentials()));
  
  // Prepare and send a test message
  std::string user("arst");
  std::cout << "Sending '" << user << "' to " << target_str << " ... ";
  
  // Get and print the server's response
  std::string reply = greeter.SayHello(user);
  std::cout << "Received: " << reply << std::endl;

  return 0;  // Exit successfully
}
```

Key improvements in the comments:
1. Added file-level comment about the copyright
2. Explained each include statement's purpose
3. Documented the using declarations
4. Added detailed class and method documentation
5. Explained the main program flow
6. Clarified the purpose of each significant code block
7. Noted the use of Unix domain sockets in abstract namespace
8. Added comments about error handling and RPC status checking

The comments are concise but informative, helping future developers understand both the high-level flow and important implementation details.