Here's the commented version of the code:

```c++
# Copyright 2021 gRPC authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
"""The Python AsyncIO implementation of the GRPC hellostreamingworld.MultiGreeter server."""

import asyncio
import logging

import grpc
from hellostreamingworld_pb2 import HelloReply
from hellostreamingworld_pb2 import HelloRequest
from hellostreamingworld_pb2_grpc import MultiGreeterServicer
from hellostreamingworld_pb2_grpc import add_MultiGreeterServicer_to_server

# Constant defining how many greeting messages will be sent in the stream
NUMBER_OF_REPLY = 10

class Greeter(MultiGreeterServicer):
    """Implementation of the MultiGreeter service."""
    
    async def sayHello(
        self, request: HelloRequest, context: grpc.aio.ServicerContext
    ) -> HelloReply:
        """Implements the sayHello RPC method as a streaming response.
        
        Args:
            request: HelloRequest containing the name to greet
            context: gRPC servicer context for handling RPC metadata
            
        Yields:
            HelloReply messages in a stream, each containing a greeting with the request's name
        """
        logging.info("Serving sayHello request %s", request)
        for i in range(NUMBER_OF_REPLY):
            # Generate NUMBER_OF_REPLY greeting messages in sequence
            yield HelloReply(message=f"Hello number {i}, {request.name}!")

async def serve() -> None:
    """Starts the gRPC server and listens for incoming requests."""
    # Create an async gRPC server
    server = grpc.aio.server()
    
    # Add our Greeter service implementation to the server
    add_MultiGreeterServicer_to_server(Greeter(), server)
    
    # Configure the listening address and port
    listen_addr = "[::]:50051"
    server.add_insecure_port(listen_addr)
    
    logging.info("Starting server on %s", listen_addr)
    
    # Start the server and keep it running until terminated
    await server.start()
    await server.wait_for_termination()

if __name__ == "__main__":
    # Configure basic logging and start the server
    logging.basicConfig(level=logging.INFO)
    asyncio.run(serve())
```

Key improvements made:
1. Added detailed docstrings for the Greeter class and its methods
2. Added comments explaining the purpose of constants and important variables
3. Added comments for each significant section of the server setup code
4. Fixed the license header formatting (added missing # on empty lines)
5. Added explanation of the streaming nature of the sayHello method
6. Documented the async server lifecycle methods

The comments now provide clear explanations of:
- What each component does
- How the streaming RPC works
- The server setup and lifecycle
- The purpose of each code section