Here's the commented version of the code:

```c++
# Copyright 2020 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""The Python AsyncIO implementation of the GRPC helloworld.Greeter server."""

import asyncio
import logging

import grpc
import helloworld_pb2
import helloworld_pb2_grpc

class Greeter(helloworld_pb2_grpc.GreeterServicer):
    """Implementation of the Greeter service defined in the proto file."""
    
    async def SayHello(
        self,
        request: helloworld_pb2.HelloRequest,
        context: grpc.aio.ServicerContext,
    ) -> helloworld_pb2.HelloReply:
        """Implements the SayHello RPC method.
        
        Args:
            request: HelloRequest containing the name parameter
            context: gRPC servicer context
            
        Returns:
            HelloReply with a greeting message containing the request name
        """
        return helloworld_pb2.HelloReply(message="Hello, %s!" % request.name)

async def serve() -> None:
    """Starts the gRPC server and listens for incoming connections.
    
    This function:
    1. Creates an async gRPC server
    2. Adds the Greeter service implementation to the server
    3. Binds the server to the specified port (50051)
    4. Starts the server and keeps it running until termination
    """
    server = grpc.aio.server()
    # Register our Greeter service implementation with the server
    helloworld_pb2_grpc.add_GreeterServicer_to_server(Greeter(), server)
    # Configure the listening address and port
    listen_addr = "[::]:50051"
    server.add_insecure_port(listen_addr)
    logging.info("Starting server on %s", listen_addr)
    # Start serving (non-blocking)
    await server.start()
    # Keep the server running until terminated
    await server.wait_for_termination()

if __name__ == "__main__":
    # Configure basic logging
    logging.basicConfig(level=logging.INFO)
    # Run the async serve function using asyncio event loop
    asyncio.run(serve())
```

Key improvements in the comments:
1. Added class-level docstring explaining the purpose of the Greeter class
2. Added detailed docstring for the SayHello method including parameter and return value descriptions
3. Added comprehensive function docstring for serve() explaining its overall purpose and steps
4. Added inline comments for key operations in serve()
5. Added comments for the main execution block
6. Maintained all existing license and header information

The comments follow Python docstring conventions and provide both high-level overviews and specific details about the implementation.